--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <Tittle>Menu Simple Horizontal - blog</title>
-        <meta carset="utf-8" />
-</head>
+    <head>
+        <meta carset="utf-8"/>
+        <Tittle>Mon CV</title>
+        
+    </head>
 
-<body>
-    <p>Bienvenue sur mon CV</p>
-</body>
-
+    <body>
+        <h1>TRUONG Bernard</h1>
+            <<ul>
+                <li>12/03/1979</li>
+                <li>55430 Belleville sur Meuse</li>
+                <li>Permis B</li>
+        </ul>
+    </body>
 </html>
